--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "content-testing-library",
+  "name": "sphinx",
   "version": "0.0.1",
   "description": "A library of testing functions which can be used in jest to validate various html, javascript or css files",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "prepublish": "tsc",
     "test": "tsc && jest",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "build": "tsc"
   },
   "author": "Thomas Sattlecker",
   "license": "ISC",
+  "dependencies": {
+    "sphinx": "github:getmimo/sphinx"
+  },
   "devDependencies": {
     "jest": "^24.8.0",
     "node-html-parser": "^1.1.16",
