--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "preinstall": "tsc",
+    "install": "tsc",
     "test": "tsc && jest",
     "tsc": "tsc",
     "build": "tsc"
