--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^12.6.8",
-    "sphinx": "github:getmimo/sphinx"
+    "@types/node": "^12.6.8"
   },
   "devDependencies": {
     "jest": "^24.8.0",
