--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "tsc && jest",
     "test-watch": "tsc && jest --watch",
-    "tsc": "tsc"
+    "build": "tsc"
   },
   "author": "Thomas Sattlecker",
   "contributors": [
@@ -21,8 +21,14 @@
     "@types/node": "^12.6.8"
   },
   "devDependencies": {
+    "husky": "^3.0.1",
     "jest": "^24.8.0",
     "node-html-parser": "^1.1.16",
     "typescript": "^3.5.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "build"
+    }
   }
 }
