--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     }
   ],
   "license": "ISC",
-  "dependencies": {
-    "@types/node": "^12.6.8"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@types/node": "^12.6.9",
     "husky": "^3.0.1",
     "jest": "^24.8.0",
     "node-html-parser": "^1.1.16",
