--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "node-html-parser": "1.1.0"
+    "cowsay": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^12.6.9",
     "husky": "^3.0.1",
     "jest": "^24.8.0",
+    "node-html-parser": "^1.1.16",
     "typescript": "^3.5.3"
   },
   "husky": {
