--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     }
   ],
   "license": "ISC",
-  "dependencies": {
-    "cowsay": "^1.4.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^12.6.9",
     "husky": "^3.0.1",
