--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test"
+      "pre-commit": "npm run test && git add ."
     }
   }
 }
