--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     }
   ],
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "jquery": "3.4.0"
+  },
   "devDependencies": {
     "@types/node": "^12.6.9",
     "husky": "^3.0.1",
-    "jest": "^24.8.0",
+    "jest": "22.4.4",
     "node-html-parser": "^1.1.16",
     "typescript": "^3.5.3"
   },
