--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "tsc && jest",
     "test-watch": "tsc && jest --watch",
-    "build": "tsc",
+    "build": "tsc && mv testrunner.js dist/testrunner.js",
     "test-verbose": "tsc && jest --verbose"
   },
   "author": "Thomas Sattlecker",
