--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "tsc && jest",
+    "test": "jest",
     "test-watch": "tsc && jest --watch",
-    "build": "tsc && mv testrunner.js dist/testrunner.js",
+    "build": "tsc && cp testrunner.js dist/testrunner.js",
     "test-verbose": "tsc && jest --verbose"
   },
   "author": "Thomas Sattlecker",
@@ -31,7 +31,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test && git add ."
+      "pre-commit": "npm run test && npm run build && git add ."
     }
   }
 }
