--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsdom": "^15.2.1",
     "jsdom-global": "^3.0.2",
     "node-html-parser": "^1.1.16",
+    "rewire": "^4.0.1",
     "typescript": "^3.5.3"
   },
   "husky": {
