--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "test-watch": "tsc && jest --watch",
     "test-testrunner-example": "node ./testrunner-examples/test.js",
-    "build": "tsc && cp ./peregrine-falcon/index.js dist/peregrine-falcon/index.js",
+    "build": "tsc && cp ./falcon/index.js dist/falcon/index.js",
     "test-verbose": "tsc && jest --verbose"
   },
   "author": "Thomas Sattlecker",
