--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsdom-global": "^3.0.2",
     "lint-staged": "^10.0.9",
     "node-html-parser": "^1.1.16",
+    "prettier": "^2.0.4",
     "rewire": "^4.0.1",
     "typescript": "^3.5.3"
   },
