--- a/package.json
+++ b/package.json
@@ -21,20 +21,21 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "deep-equal": "^1.1.0",
+    "deep-equal": "^1.1.1",
     "jquery": "3.4.0"
   },
   "devDependencies": {
-    "@types/node": "^12.6.9",
-    "husky": "^4.2.3",
-    "jest": "22.4.4",
-    "jsdom": "^15.2.1",
+    "@types/node": "^12.20.19",
+    "husky": "^4.3.8",
+    "jest": "^27.0.6",
+    "jsdom": "^16.7.0",
     "jsdom-global": "^3.0.2",
-    "lint-staged": "^10.0.9",
-    "node-html-parser": "^1.1.16",
-    "prettier": "^2.0.4",
+    "lint-staged": "^10.5.4",
+    "node-html-parser": "^1.4.9",
+    "prettier": "^2.3.2",
     "rewire": "^4.0.1",
-    "typescript": "^3.5.3"
+    "ts-jest": "^27.0.4",
+    "typescript": "^4.3.5"
   },
   "lint-staged": {
     "*.ts": [
