--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "tsc && jest",
     "test-watch": "tsc && jest --watch",
     "test-testrunner-example": "node ./testrunner-examples/test.js",
+    "test-falcon-2": "node ./testrunner-examples/test-falcon-2.js",
     "build": "tsc && cp ./falcon/index.js dist/falcon/index.js",
     "test-verbose": "tsc && jest --verbose"
   },
@@ -21,6 +22,8 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.4",
+    "chai-dom": "^1.10.0",
     "deep-equal": "^1.1.1",
     "jquery": "3.4.0"
   },
