--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "chai": "^4.3.4",
     "chai-dom": "^1.10.0",
+    "chai-things": "^0.2.0",
     "deep-equal": "^1.1.1",
     "jquery": "3.4.0"
   },
